--- a/package.json
+++ b/package.json
@@ -35,60 +35,69 @@
     "deps:graph": "depcruise src --include-only \"^src\" --config --output-type dot | dot -T svg > assets/dependency-graph.svg"
   },
   "dependencies": {
-    "@nestjs/apollo": "^10.1.3",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/cqrs": "^9.0.1",
-    "@nestjs/event-emitter": "^1.3.1",
-    "@nestjs/graphql": "^10.1.2",
-    "@nestjs/microservices": "^9.1.2",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/swagger": "^6.1.2",
-    "@slonik/migrator": "^0.11.3",
-    "apollo-server-core": "^3.10.2",
-    "apollo-server-express": "^3.10.2",
+    "@as-integrations/fastify": "^2.1.1",
+    "@fastify/static": "^6.12.0",
+    "@nestjs/apollo": "^12.0.11",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/cqrs": "^10.2.6",
+    "@nestjs/event-emitter": "^2.0.3",
+    "@nestjs/graphql": "^12.0.11",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.3.0",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/platform-fastify": "^10.3.0",
+    "@nestjs/swagger": "^7.1.17",
+    "@prisma/client": "5.8.0",
+    "apollo-server-core": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
-    "dotenv": "^16.0.2",
-    "env-var": "^7.3.0",
-    "graphql": "^16.6.0",
+    "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
+    "env-var": "^7.4.1",
+    "fastify": "^4.25.2",
+    "graphql": "^16.8.1",
     "jest-cucumber": "^3.0.1",
-    "nanoid": "^3.3.4",
-    "nestjs-console": "^8.0.0",
-    "nestjs-request-context": "^2.1.0",
-    "nestjs-slonik": "^9.0.0",
-    "oxide.ts": "^1.0.5",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "slonik": "^31.2.4",
-    "uuid": "^9.0.0",
-    "zod": "^3.21.4"
+    "nanoid": "^5.0.4",
+    "nestjs-console": "^9.0.0",
+    "nestjs-request-context": "^3.0.0",
+    "oxide.ts": "^1.1.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.12",
+    "rimraf": "^5.0.5",
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "dependency-cruiser": "^12.10.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "@nestjs/cli": "^10.3.0",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.21",
+    "@types/jest": "29.5.11",
+    "@types/node": "^20.11.0",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
+    "dependency-cruiser": "^16.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "29.7.0",
+    "prettier": "^3.1.1",
+    "prisma": "^5.8.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "29.1.1",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
